--- a/style.less
+++ b/style.less
@@ -30,3 +30,15 @@ h1, h2, h1 a, h2 a {
 .crew {
 	color: @admins;
 }
+
+#tracker .fakeTop>div {
+	display: none;
+}
+
+body.hasTracker #tracker {
+	display: none;
+}
+
+body.hasTracker {
+	margin-left: 0;
+}
