--- a/style.less
+++ b/style.less
@@ -31,7 +31,7 @@ h1, h2, h1 a, h2 a {
 	color: @admins;
 }
 
-#tracker .fakeTop>div {
+#tracker .fakeTop > div {
 	display: none;
 }
 
@@ -41,4 +41,8 @@ body.hasTracker #tracker {
 
 body.hasTracker {
 	margin-left: 0;
+}
+
+#menubar {
+	width: 100%;
 }
