--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,5 @@
+@username: 'default';
+
 // General
 @top: 'default';
 @headers: 'default';
@@ -19,6 +21,7 @@
 @placePostsClose: false;
 @replyStyleNewMessages: false;
 @lessSpaceBetweenTopicTitles: false;
+@hideLastReply: false;
 
 // Pricewatch
 
