--- a/less/variables.less
+++ b/less/variables.less
@@ -22,6 +22,8 @@
 @replyStyleNewMessages: false;
 @lessSpaceBetweenTopicTitles: false;
 @hideLastReply: false;
+@lessObviousThumbsUp: false;
+@hideThumbsUp: false;
 
 // Pricewatch
 
